Add pre-commit hooks for code quality and formatting

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-extend-ignore = E203, E501
+extend-ignore = E203, E501, D1, D4, E402,E501,E127,E128,E265,E301,E302,E305,E266,E731,N803,N806,E402,F405,W503,W504
 exclude =
     .git,
     venv,
@@ -10,3 +10,7 @@ exclude =
     dist
 max-line-length=120
 max-complexity = 10
+
+[isort]
+profile = black
+multi_line_output = 3
