--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ decorator==5.1.1
 Django==4.2
 django-debug-toolbar==4.2.0
 executing==2.0.1
+factory-boy==3.3.0
+Faker==22.7.0
+faker-commerce==1.0.3
 flake8==6.0.0
 ipython==8.20.0
 jedi==0.19.1
@@ -18,6 +21,7 @@ pure-eval==0.2.2
 pycodestyle==2.10.0
 pyflakes==3.0.1
 Pygments==2.17.2
+python-dateutil==2.8.2
 python-decouple==3.8
 six==1.16.0
 sqlparse==0.4.4
