--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = [
 ]
 readme = "README.md"
 requires-python = "3.13.2"
+package-mode = false
+
 dependencies = [
     "django>=5.1.7,<6.0.0",
     "djangorestframework>=3.15.2,<4.0.0",
